--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,13 +7,19 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "Corsair" %></title>
 
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <%= stylesheet_link_tag "app" %>
+    <%= javascript_include_tag "all" %>
+
   </head>
 
   <body class="<%= page_classes %>">
+    <%= partial "header" %>
     <%= yield %>
+    <%= partial "footer" %>
   </body>
 </html>
